--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <meta name="apple-mobile-web-app-title">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.min.css">
 </head>
 
 <body class="container">
@@ -49,7 +49,7 @@
             <img class="top-card" src="./img/card.png" alt="top-card">
         </div>
     </nav>
-    <script src="./js/script.js"></script>
+    <script src="./js/script.min.js"></script>
 </body>
 
 </html>
